[package]
name = "discovery-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9.34"
tracing-appender = "0.2.3"
hyper = { version = "1.4.1", features = ["server", "http1"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.8", features = ["tokio"] }
axum = "0.7.5"
